<resources>
    <string name="app_name">MidiLib Demo App</string>
    <string name="play_note">Play Note</string>
    <string name="play_chord">Play Chord</string>
    <string name="stop">Stop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pitch">Pitch</string>
    <string name="detune">Detune</string>
    <string name="voices">Voices</string>
    <string name="filter">Filter\t\t\t</string>
    <string name="limiter">Limiter\t\t</string>
    <string name="attack">Attack</string>
    <string name="decay">Decay</string>
    <string name="sustain">Sustain</string>
    <string name="release">Release</string>
</resources>