<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mixer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/mixer_item" />

    <RelativeLayout
        android:id="@+id/playSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mixer"
        android:gravity="center">

        <Button
            android:id="@+id/playNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_note"/>

        <Button
            android:id="@+id/playChord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/playNote"
            android:text="@string/play_chord" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/playChord"
            android:text="@string/stop" />
    </RelativeLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:paddingHorizontal="10dp"
            android:text="@string/attack" />

        <SeekBar
            android:id="@+id/attack"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:paddingHorizontal="10dp"
            android:text="@string/decay" />

        <SeekBar
            android:id="@+id/decay"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:paddingHorizontal="10dp"
            android:text="@string/sustain" />

        <SeekBar
            android:id="@+id/sustain"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:paddingHorizontal="10dp"
            android:text="@string/release" />

        <SeekBar
            android:id="@+id/release"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/filterSwitch"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingHorizontal="10dp"
            android:text="@string/filter" />

        <Spinner
            android:id="@+id/filterSpinner"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_height="50dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/limiterSwitch"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingHorizontal="10dp"
            android:text="@string/limiter" />

        <SeekBar
            android:id="@+id/limiterGain"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_height="30dp" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>